# StudyBuddy

./: .env.example  .gitignore  PRODUCT_PLAN.md  README.md  app.config.js  package-lock.json  package.json  render.yaml  test-groq.js  tsconfig.base.json  tsconfig.json
app/: _layout.tsx
app/(tabs)/: _layout.tsx  buddy.tsx  index.tsx  library.tsx  reminders.tsx  roadmap.tsx
apps/api/: .env.example  package.json  tsconfig.json
apps/api/src/: app.ts  (+1 more)
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
assest/: loading_v2.html  roadmap.html  studybuddy-landing.html
backend/: .env.example  clear-db.cjs  clear-db.js  package.json  reset-db.js  test-groq.js  tsconfig.json
backend/cpp-agent/: CMakeLists.txt  README.md  install.ps1
backend/cpp-agent/src/: main.cpp
backend/cpp-agent/src/ai/: groq_client.cpp  groq_client.h
backend/cpp-agent/src/cli/: command_parser.cpp  command_parser.h  config_loader.cpp  config_loader.h  logger.cpp  logger.h  repl.cpp  repl.h
backend/cpp-agent/src/modules/: file_ops.cpp  file_ops.h  notes.cpp  notes.h
backend/cpp-agent/src/sync/: offline_queue.cpp  offline_queue.h  sync_client.cpp  sync_client.h
backend/src/: app.ts  server.ts
components/: ChatBubble.tsx  ConfettiAnimation.tsx  MilestoneCard.tsx  NoteCard.tsx  NoteModal.tsx  QuickPromptChips.tsx  ReminderCard.tsx  SubjectTabs.tsx  Toast.tsx
constants/: theme.ts
context/: AppContext.tsx
docs/: deployment.md  scaffold-notes.md
frontend/: .env.example  dark_mode_converter.js  generate-favicons.cjs  index.html  package.json  tailwind.config.cjs  theme-fixer.cjs  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
frontend/public/: sw.js
lib/: date.ts  db.ts  db.web.ts  gemini.ts  notifications.ts  quickActions.ts  responsive.ts  roadmapSync.ts  types.ts
scratch/: test-api.js
studybuddy-extension/: background.js  content.js  manifest.json  popup.html
(+370 files in other folders)
